[package]
name = "rsend"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "The security conscious, CLI file-sharing tool. (placeholder)"
repository = "https://github.com/alessiottavo/rsend.git"
readme = "README.md"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
unwrap_used = "deny"
expect_used = "deny"